fix(toolbar-style): Add gradient to top toolbar, blurred styling

--- a/static/variables/ui-variables.less
+++ b/static/variables/ui-variables.less
@@ -481,7 +481,7 @@
 @body-bg: @white;
 //== Panels and Sidebars
 @panel-background-color: @gray-lighter;
-@toolbar-background-color: @gray-lighter;
+@toolbar-background-color: darken(@white, 13%);
 
 // Helpers for Specs - Do Not Remove
 @spec-test-variable: rgb(152,123,0);
